--- a/getData.ipynb
+++ b/getData.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import tensorqtl\n",
+    "from tensorqtl import genotypeio, cis, trans"
    ]
   },
   {
@@ -150,6 +152,283 @@
     "                             window=1000000,\n",
     "                             output_dir='.',\n",
     "                             write_top=True, write_stats=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing q-values\n",
+      "  * Number of phenotypes tested: 7\n",
+      "  * Correlation between Beta-approximated and empirical p-values: 0.9995\n",
+      "  * Calculating q-values with lambda = 0.010\n",
+      "  * Proportion of significant phenotypes (1-pi0): 0.00\n",
+      "  * QTL phenotypes @ FDR 0.05: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO 矫正pvalue \n",
+    "cis_df=pd.read_csv(\"./All_eGene_permutate.txt\",header=0,index_col=0,sep=\"\\t\")\n",
+    "#* 测试的基因数目太少了，修改lambda\n",
+    "tensorqtl.calculate_qvalues(cis_df, qvalue_lambda=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_var</th>\n",
+       "      <th>beta_shape1</th>\n",
+       "      <th>beta_shape2</th>\n",
+       "      <th>true_df</th>\n",
+       "      <th>pval_true_df</th>\n",
+       "      <th>variant_id</th>\n",
+       "      <th>tss_distance</th>\n",
+       "      <th>ma_samples</th>\n",
+       "      <th>ma_count</th>\n",
+       "      <th>af</th>\n",
+       "      <th>pval_nominal</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>slope_se</th>\n",
+       "      <th>pval_perm</th>\n",
+       "      <th>pval_beta</th>\n",
+       "      <th>qval</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phenotype_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000010</th>\n",
+       "      <td>2910</td>\n",
+       "      <td>1.060317</td>\n",
+       "      <td>167.80818</td>\n",
+       "      <td>154.71806</td>\n",
+       "      <td>0.002920</td>\n",
+       "      <td>1_360122</td>\n",
+       "      <td>347814</td>\n",
+       "      <td>63</td>\n",
+       "      <td>117</td>\n",
+       "      <td>0.297927</td>\n",
+       "      <td>0.000912</td>\n",
+       "      <td>0.271290</td>\n",
+       "      <td>0.080528</td>\n",
+       "      <td>0.373626</td>\n",
+       "      <td>0.359106</td>\n",
+       "      <td>0.448556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000020</th>\n",
+       "      <td>2930</td>\n",
+       "      <td>1.019808</td>\n",
+       "      <td>242.78668</td>\n",
+       "      <td>169.25060</td>\n",
+       "      <td>0.000918</td>\n",
+       "      <td>1_166471</td>\n",
+       "      <td>148289</td>\n",
+       "      <td>98</td>\n",
+       "      <td>188</td>\n",
+       "      <td>0.520619</td>\n",
+       "      <td>0.000414</td>\n",
+       "      <td>0.257425</td>\n",
+       "      <td>0.071629</td>\n",
+       "      <td>0.186813</td>\n",
+       "      <td>0.192107</td>\n",
+       "      <td>0.391936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000030</th>\n",
+       "      <td>2984</td>\n",
+       "      <td>1.009826</td>\n",
+       "      <td>192.33210</td>\n",
+       "      <td>159.18356</td>\n",
+       "      <td>0.001345</td>\n",
+       "      <td>1_195640</td>\n",
+       "      <td>171061</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0.056701</td>\n",
+       "      <td>0.000428</td>\n",
+       "      <td>-0.562865</td>\n",
+       "      <td>0.157021</td>\n",
+       "      <td>0.232767</td>\n",
+       "      <td>0.223964</td>\n",
+       "      <td>0.391936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000040</th>\n",
+       "      <td>2989</td>\n",
+       "      <td>1.082678</td>\n",
+       "      <td>160.75177</td>\n",
+       "      <td>150.88371</td>\n",
+       "      <td>0.000242</td>\n",
+       "      <td>1_491189</td>\n",
+       "      <td>458872</td>\n",
+       "      <td>22</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.116022</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>-0.486441</td>\n",
+       "      <td>0.114659</td>\n",
+       "      <td>0.023976</td>\n",
+       "      <td>0.028057</td>\n",
+       "      <td>0.196402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000050</th>\n",
+       "      <td>3021</td>\n",
+       "      <td>1.043395</td>\n",
+       "      <td>225.35234</td>\n",
+       "      <td>164.27260</td>\n",
+       "      <td>0.003105</td>\n",
+       "      <td>1_455015</td>\n",
+       "      <td>413933</td>\n",
+       "      <td>102</td>\n",
+       "      <td>197</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.001386</td>\n",
+       "      <td>-0.234446</td>\n",
+       "      <td>0.072248</td>\n",
+       "      <td>0.510490</td>\n",
+       "      <td>0.483138</td>\n",
+       "      <td>0.483138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000060</th>\n",
+       "      <td>3044</td>\n",
+       "      <td>0.975400</td>\n",
+       "      <td>154.70288</td>\n",
+       "      <td>154.78766</td>\n",
+       "      <td>0.001173</td>\n",
+       "      <td>1_3045</td>\n",
+       "      <td>-42649</td>\n",
+       "      <td>53</td>\n",
+       "      <td>103</td>\n",
+       "      <td>0.737245</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.294419</td>\n",
+       "      <td>0.079939</td>\n",
+       "      <td>0.178821</td>\n",
+       "      <td>0.175072</td>\n",
+       "      <td>0.391936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garb_01G000070</th>\n",
+       "      <td>3101</td>\n",
+       "      <td>1.071897</td>\n",
+       "      <td>206.42955</td>\n",
+       "      <td>160.35652</td>\n",
+       "      <td>0.002625</td>\n",
+       "      <td>1_458889</td>\n",
+       "      <td>404529</td>\n",
+       "      <td>18</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.094595</td>\n",
+       "      <td>0.000992</td>\n",
+       "      <td>0.420298</td>\n",
+       "      <td>0.125675</td>\n",
+       "      <td>0.394605</td>\n",
+       "      <td>0.384476</td>\n",
+       "      <td>0.448556</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                num_var  beta_shape1  beta_shape2    true_df  pval_true_df  \\\n",
+       "phenotype_id                                                                 \n",
+       "Garb_01G000010     2910     1.060317    167.80818  154.71806      0.002920   \n",
+       "Garb_01G000020     2930     1.019808    242.78668  169.25060      0.000918   \n",
+       "Garb_01G000030     2984     1.009826    192.33210  159.18356      0.001345   \n",
+       "Garb_01G000040     2989     1.082678    160.75177  150.88371      0.000242   \n",
+       "Garb_01G000050     3021     1.043395    225.35234  164.27260      0.003105   \n",
+       "Garb_01G000060     3044     0.975400    154.70288  154.78766      0.001173   \n",
+       "Garb_01G000070     3101     1.071897    206.42955  160.35652      0.002625   \n",
+       "\n",
+       "               variant_id  tss_distance  ma_samples  ma_count        af  \\\n",
+       "phenotype_id                                                              \n",
+       "Garb_01G000010   1_360122        347814          63       117  0.297927   \n",
+       "Garb_01G000020   1_166471        148289          98       188  0.520619   \n",
+       "Garb_01G000030   1_195640        171061          12        22  0.056701   \n",
+       "Garb_01G000040   1_491189        458872          22        42  0.116022   \n",
+       "Garb_01G000050   1_455015        413933         102       197  0.500000   \n",
+       "Garb_01G000060     1_3045        -42649          53       103  0.737245   \n",
+       "Garb_01G000070   1_458889        404529          18        35  0.094595   \n",
+       "\n",
+       "                pval_nominal     slope  slope_se  pval_perm  pval_beta  \\\n",
+       "phenotype_id                                                             \n",
+       "Garb_01G000010      0.000912  0.271290  0.080528   0.373626   0.359106   \n",
+       "Garb_01G000020      0.000414  0.257425  0.071629   0.186813   0.192107   \n",
+       "Garb_01G000030      0.000428 -0.562865  0.157021   0.232767   0.223964   \n",
+       "Garb_01G000040      0.000034 -0.486441  0.114659   0.023976   0.028057   \n",
+       "Garb_01G000050      0.001386 -0.234446  0.072248   0.510490   0.483138   \n",
+       "Garb_01G000060      0.000300  0.294419  0.079939   0.178821   0.175072   \n",
+       "Garb_01G000070      0.000992  0.420298  0.125675   0.394605   0.384476   \n",
+       "\n",
+       "                    qval  \n",
+       "phenotype_id              \n",
+       "Garb_01G000010  0.448556  \n",
+       "Garb_01G000020  0.391936  \n",
+       "Garb_01G000030  0.391936  \n",
+       "Garb_01G000040  0.196402  \n",
+       "Garb_01G000050  0.483138  \n",
+       "Garb_01G000060  0.391936  \n",
+       "Garb_01G000070  0.448556  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cis_df"
    ]
   },
   {
