--- a/getData.ipynb
+++ b/getData.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Mapping files: 100%|██████████| 3/3 [00:05<00:00,  1.99s/it]\n"
+      "Mapping files: 100%|██████████| 3/3 [00:05<00:00,  1.79s/it]\n"
      ]
     }
    ],
@@ -138,14 +138,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#* 对指定的基因list进行nominal分析\n",
+    "geneList=pd.DataFrame(\n",
+    "    ['Garb_01G000040']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    filter_phenotype=phenotype_df.loc[geneList[0].values]\n",
+    "    filter_pos=phenotype_pos_df.loc[geneList[0].values]\n",
+    "except KeyError:\n",
+    "    print(\"gene ID not in the phenotype!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cis-QTL mapping: nominal associations for all variant-phenotype pairs\n",
+      "  * 197 samples\n",
+      "  * 1 phenotypes\n",
+      "  * 3 covariates\n",
+      "  * 2143543 variants\n",
+      "  * applying in-sample 0.05 MAF filter\n",
+      "  * checking phenotypes: 1/1\n",
+      "  * Computing associations\n",
+      "    Mapping chromosome 1\n",
+      "    processing phenotype 1/1\n",
+      "    time elapsed: 0.00 min\n",
+      "    * writing output\n",
+      "done.\n"
+     ]
+    }
+   ],
+   "source": [
     "# 进行cis-eQTL nominal分析\n",
     "cis.map_nominal(genotype_df, variant_df,\n",
-    "                             phenotype_df,\n",
-    "                             phenotype_pos_df,\n",
+    "                             filter_phenotype,\n",
+    "                             filter_pos,\n",
     "                             prefix='nominalOut',\n",
     "                             covariates_df=covariates_df,\n",
     "                             maf_threshold=0.05,\n",
@@ -454,7 +499,7 @@
    ],
    "source": [
     "#TODO 进行trans-eQTL分析\n",
-    "#! 保留所有显著的位点\n",
+    "#! 保留所有位点的beta与se值\n",
     "trans_df = trans.map_trans(genotype_df, phenotype_df, covariates_df,\n",
     "                           return_sparse=True, pval_threshold=1, maf_threshold=0.05,\n",
     "                           batch_size=20000)"
